--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,6 @@
-
+14.03.2016 
+            leere Templates erstellt
+01.04.2016 
+            single.php, page.php, search.php, archive.php gelöscht
+            Loop in die index.php hinzugefügt
+            style.css und functions.php aufgefrischt, so dass das leere Theme installiert werden kann
